# VideoPlayer

./: CMakeLists.txt  README.md
src/Player/: VideoPlayer.cpp
